@@ -1,0 +1,2 @@
+rmac copyrom.s -fb -o copyrom.o
+rln -A 802000 x x copyrom.o -n -o copyrom.bin
